--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,15 @@ body {
 
 img {
   border-radius: 10px;
+  width: 60%;
+  height: auto;
+}
+
+ul li a {
+  color: darkred;
+  font-size: 13px;
+  font-family: monospace;
+  font-weight: bold;
 }
 
 .sidebar {
@@ -15,16 +24,13 @@ img {
   padding-right: 20px;
 }
 
-ul li a {
-  color: darkred;
-  font-size: 20px;
-  font-family: monospace;
-  font-weight: bold;
+.synth {
+  color: brown;
 }
 
 #link {
   font-family: monospace;
-  font-size: 25px;
+  font-size: 15px;
   font-weight: bold;
   text-align: center;
   color: grey;
